--- a/week_11/day_3/week11_day3/week11_day3.Rmd
+++ b/week_11/day_3/week11_day3/week11_day3.Rmd
@@ -189,7 +189,163 @@ rect.hclust(dendro_ps, k = 6, border = 2:5)
 
 ```
 
+** LUNCH BREAK** 
 
+
+## K means clustering
+
+You can tell it how many you're looking for, and it will group into this many (centroids)
+
+When running k-means, the centroids get randomly placed
+Then observations get assigned to a centroid, based on euclidean distance
+The centroid is then moved to the centre of the cluster
+
+
+```{r}
+edu_data <- read_csv("data/school_data.csv")
+```
+```{r}
+library(janitor)
+
+edu_data <- edu_data %>%
+  column_to_rownames("X1") %>%
+  clean_names()
+```
+
+```{r}
+edu_data <- edu_data %>%
+  select(home_school, state_school)
+```
+
+plotting the data, getting an overview of it
+```{r}
+edu_data %>%
+  ggplot(aes(x = home_school, y = state_school)) +
+  geom_point()
+```
+
+Scaling the data
+```{r}
+edu_scale <- edu_data %>%
+  mutate_if(is.numeric, scale)
+
+```
+
+Doing the k-means clustering
+```{r}
+set.seed(1234)
+
+# when doing this in practice, the seed shouldn't be set. 
+
+clustered_edu <- kmeans(edu_scale,
+                        centers = 6,
+                        nstart = 25)
+clustered_edu
+```
+
+```{r}
+library(tidyverse)
+library(broom)
+
+tidy(clustered_edu,
+     col.names = colnames(edu_scale))
+
+augment(clustered_edu, edu_data)
+```
+
+```{r}
+clustered_edu$totss
+```
+
+
+```{r}
+
+max_k <- 20
+
+k_clusters <- tibble(k = 1:max_k) %>%
+  mutate(
+    kclust = map(k, ~ kmeans(edu_scale, .x, nstart = 25)),
+    tidied = map(kclust, tidy),
+    glanced = map(kclust, glance),
+    augmented = map(kclust, augment, edu_data)
+  )
+
+k_clusters
+```
+
+How to access / read the data
+```{r}
+k_clusters %>%
+  select(1,5) %>%
+  unnest()
+```
+
+
+metric of interest: __tot.withinss__
+
+optimal number of clusters
+
+```{r}
+# elbow method/point - is a way of choosing the number of clusters
+
+
+```
+
+```{r}
+clusterings <- k_clusters %>%
+  unnest(glanced)
+```
+
+```{r}
+ggplot(clusterings, aes(x=k, y=tot.withinss)) +
+  geom_point() +
+    geom_line() +
+    scale_x_continuous(breaks = seq(1, 20, by = 1))
+```
+
+```{r}
+library(factoextra)
+
+fviz_nbclust(edu_scale,
+             kmeans,
+             method = "wss",
+             nstart = 25)
+```
+
+```{r}
+fviz_nbclust(edu_scale, 
+             kmeans, 
+             method = "silhouette", 
+             nstart = 25)
+```
+
+a different method of chosing the optimal number of clusters
+```{r}
+fviz_nbclust(edu_scale, 
+             kmeans, 
+             method = "gap_stat", 
+             nstart = 25, 
+             k.max = 10)
+```
+
+visualising the chosen plot
+```{r}
+clusterings %>% 
+  unnest(cols = c(augmented)) %>%
+  filter(k <= 6) %>%
+  ggplot(aes(x = home_school, y = state_school)) +
+  geom_point(aes(color = .cluster))
+```
+
+plotting 2 clusters, with labels
+```{r}
+clusterings %>% 
+  unnest(cols = c(augmented)) %>%
+  filter(k == 2) %>%
+ ggplot(aes(x = home_school, y = state_school, colour = .cluster, label = .rownames)) +
+  geom_point(aes(color = .cluster)) +
+  geom_text(hjust = 0, vjust = - 0.5, size = 3)
+```
 
 
 
